Clean up naming

--- a/src/main/resources/ZephyrTranspilerBundle_en.properties
+++ b/src/main/resources/ZephyrTranspilerBundle_en.properties
@@ -1,7 +1,7 @@
 zephyr.action.new.file.error.story.format="Expecting textual identifier followed by an integer story ID, e.g. ABC-12345"
-zephyr.settings.title=Zephyr Project Settings
+zephyr.settings.title=Zephyr Test Case Transpiler Project Settings
 zephyr.settings.storyprefix.label=Story prefix
-zephyr.settings.jira.storyprefix.description=Enter story prefix to use in input dialogs, e.g. ABC-
+zephyr.settings.jira.issueprefix.description=Enter issue prefix to use in input dialogs, e.g. ABC-
 zephyr.settings.jira.baseurl.label=Jira API Base URL
 zephyr.settings.jira.baseurl.description=JIRA API base URL, e.g. https://jira.company.com/rest/api/2
 zephyr.settings.jira.username.label=Jira user name
